# audio_burn

./: AUTHORS  CREDITS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in  mkinstalldirs
audio_burn/: Makefile.am  Makefile.in  audio_burn.c
libaudioburn/: Makefile.am  Makefile.in  cdrecordutils.c  cdrecordutils.h  constants.h  libaudioburn.c  libaudioburn.h  miscutils.c  miscutils.h  mpg.c  mpg.h  mpgutils.c  mpgutils.h  normutils.c  normutils.h  oggutils.c  oggutils.h  processutils.c  processutils.h  securityutils.c  securityutils.h  settings.c  settings.h  soxutils.c  soxutils.h  vorbis.c  vorbis.h  wav.c  wav.h  wavutils.c  wavutils.h
