CFLAGS = @CFLAGS@
CPPFLAGS = @CPPFLAGS@

lib_LTLIBRARIES = libaudioburn.la

libaudioburn_la_SOURCES = wav.c \
                          mpg.c \
                          vorbis.c \
                          oggutils.c \
                          mpgutils.c \
                          wavutils.c \
                          securityutils.c \
                          processutils.c \
                          miscutils.c \
                          settings.c \
                          normutils.c \
                          soxutils.c \
                          cdrecordutils.c \
                          libaudioburn.c

include_HEADERS = wav.h \
                  mpg.h \
                  vorbis.h \
                  oggutils.h \
                  mpgutils.h \
                  wavutils.h \
                  securityutils.h \
                  processutils.h \
                  miscutils.h \
                  constants.h \
                  settings.h \
                  normutils.h \
                  soxutils.h \
                  cdrecordutils.h \
                  libaudioburn.h
